<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="369dp"
        android:layout_height="95dp"
        android:alpha="1"
        android:background="@drawable/rounded_corner"
        android:fontFamily="sans-serif-condensed-light"
        android:lineSpacingExtra="8sp"
        android:shadowColor="#012e2a"
        android:shadowDx="-5"
        android:shadowDy="-2"
        android:shadowRadius="3"
        android:text="@string/Tic_Tac_Toe"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/gentle_white"
        android:textSize="60sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/home_screen_logo"
        android:layout_width="191dp"
        android:layout_height="193dp"
        android:contentDescription="@string/HSL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        app:srcCompat="@drawable/home_screen"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/pvp_play"
        android:layout_width="161dp"
        android:layout_height="53dp"
        android:background="@drawable/rounded_button"
        android:onClick="gamePVP"
        android:text="@string/pvp_home_screen"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />

    <ImageView
        android:id="@+id/home_screen_supp_zero"
        android:layout_width="43dp"
        android:layout_height="52dp"
        android:contentDescription="@string/hs_support_zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782"
        app:srcCompat="@drawable/tito_zero" />

    <ImageView
        android:id="@+id/home_screen_supp_cross"
        android:layout_width="41dp"
        android:layout_height="51dp"
        android:contentDescription="@string/hs_support_cross"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779"
        app:srcCompat="@drawable/tito_cross"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>